Fix the bug that composited sticky element may not have correct offset constraint.

When a composited sticky element is nested in a composited ancestor
which has non-zero content offset, it may have incorrect offset if
its compositing container is not its ancestor scrolling layer.
When updating the web_constraint for the sticky element, we should add
the compositing container's content offset as well.

BUG=695729
TEST=third_party/WebKit/LayoutTests/compositing/overflow/composited-sticky-element-in-composited-ancestor-with-content-offset.html
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2851843002
Cr-Commit-Position: refs/heads/master@{#472782}

Former-commit-id: 2ccdd05fd1c84d98775b5559ac2b09ba742ceaca